test/parallel/forall/checks/const-indices-blc.good
const-indices-blc.chpl:5: error: cannot assign to const variable
const-indices-blc.chpl:11: error: cannot assign to const variable
